Move urls from the different acquirers to a separate yml file including some refactoring

--- a/test/fixtures.yml
+++ b/test/fixtures.yml
@@ -1,7 +1,7 @@
 # You can also paste the contents of the key and certificates here,
 # if you want to do so remove the “_file” part of the keys.
 ideal_ing_postbank:
-  test_url: https://idealtest.secure-ing.com:443/ideal/iDeal
+  acquirer: ing
   merchant_id: ID
   passphrase: PRIVATE KEY PASSPHRASE
   private_key_file: |--
