--- a/test/fixtures.yml
+++ b/test/fixtures.yml
@@ -1,6 +1,6 @@
 # You can also paste the contents of the key and certificates here,
 # if you want to do so remove the “_file” part of the keys.
-ideal_ing_postbank:
+default:
   acquirer: ing
   merchant_id: ID
   passphrase: PRIVATE KEY PASSPHRASE
